--- a/style.css
+++ b/style.css
@@ -213,15 +213,280 @@ p.matteo {
 */
 
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(66, 161, 255, 0.17);
+    width: 12px;
+    background: transparent;
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.01);
-    display: none;
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(transparent, #030C2F);
+    border-radius: 6px;
+    height: 300px;
+}
+
+::-webkit-scrollbar-thumb-hover {
+    background: linear-gradient(transparent, #00c6ff);
+}
+
+
+
+/*
+ █████╗ ███╗   ██╗██╗███╗   ███╗ █████╗ ███████╗██╗ ██████╗ ███╗   ██╗██╗
+██╔══██╗████╗  ██║██║████╗ ████║██╔══██╗╚══███╔╝██║██╔═══██╗████╗  ██║██║
+███████║██╔██╗ ██║██║██╔████╔██║███████║  ███╔╝ ██║██║   ██║██╔██╗ ██║██║
+██╔══██║██║╚██╗██║██║██║╚██╔╝██║██╔══██║ ███╔╝  ██║██║   ██║██║╚██╗██║██║
+██║  ██║██║ ╚████║██║██║ ╚═╝ ██║██║  ██║███████╗██║╚██████╔╝██║ ╚████║██║
+╚═╝  ╚═╝╚═╝  ╚═══╝╚═╝╚═╝     ╚═╝╚═╝  ╚═╝╚══════╝╚═╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝
+*/
+
+
+
+
+@keyframes scale {
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes fade-in {
+    100% {
+        opacity: 1;
+        filter: blur(0);
+    }
+}
+
+/* 
+████████╗██╗████████╗ ██████╗ ██╗      ██████╗ 
+╚══██╔══╝██║╚══██╔══╝██╔═══██╗██║     ██╔═══██╗
+   ██║   ██║   ██║   ██║   ██║██║     ██║   ██║
+   ██║   ██║   ██║   ██║   ██║██║     ██║   ██║
+   ██║   ██║   ██║   ╚██████╔╝███████╗╚██████╔╝
+   ╚═╝   ╚═╝   ╚═╝    ╚═════╝ ╚══════╝ ╚═════╝ 
+*/
+
+.title {
+    opacity: 0;
+    filter: blur(4px);
+    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+}
+
+.subtitle {
+    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+}
+
+.title:nth-child(1) {
+    animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(2) {
+    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(3) {
+    animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(4) {
+    animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(5) {
+    animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(6) {
+    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(7) {
+    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(8) {
+    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(9) {
+    animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(10) {
+    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(11) {
+    animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(12) {
+    animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(13) {
+    animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(14) {
+    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(15) {
+    animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(16) {
+    animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(17) {
+    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.title:nth-child(18) {
+    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+/*
+███████╗ ██████╗ ████████╗████████╗ ██████╗ ████████╗██╗████████╗ ██████╗ ██╗      ██████╗ 
+██╔════╝██╔═══██╗╚══██╔══╝╚══██╔══╝██╔═══██╗╚══██╔══╝██║╚══██╔══╝██╔═══██╗██║     ██╔═══██╗
+███████╗██║   ██║   ██║      ██║   ██║   ██║   ██║   ██║   ██║   ██║   ██║██║     ██║   ██║
+╚════██║██║   ██║   ██║      ██║   ██║   ██║   ██║   ██║   ██║   ██║   ██║██║     ██║   ██║
+███████║╚██████╔╝   ██║      ██║   ╚██████╔╝   ██║   ██║   ██║   ╚██████╔╝███████╗╚██████╔╝
+╚══════╝ ╚═════╝    ╚═╝      ╚═╝    ╚═════╝    ╚═╝   ╚═╝   ╚═╝    ╚═════╝ ╚══════╝ ╚═════╝ 
+*/
+
+.subtitle {
+    opacity: 0;
+    filter: blur(4px);
+    animation: scale 1000s forwards cubic-bezier(0.5, 1, 0.89, 1);
+}
+
+.subtitle:nth-child(1) {
+    animation: fade-in 0.9s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(2) {
+    animation: fade-in 0.9s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(7) {
+    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(8) {
+    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(9) {
+    animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(10) {
+    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(11) {
+    animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(12) {
+    animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(13) {
+    animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(14) {
+    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(15) {
+    animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(16) {
+    animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(17) {
+    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.subtitle:nth-child(18) {
+    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+/*
+███╗   ██╗ █████╗ ██╗   ██╗
+████╗  ██║██╔══██╗██║   ██║
+██╔██╗ ██║███████║██║   ██║
+██║╚██╗██║██╔══██║╚██╗ ██╔╝
+██║ ╚████║██║  ██║ ╚████╔╝ 
+╚═╝  ╚═══╝╚═╝  ╚═╝  ╚═══╝  
+*/
+
+.nav {
+    opacity: 0;
+    filter: blur(4px);
+    animation: scale 1s forwards cubic-bezier(0.5, 1, 0.89, 1);
+}
+
+.nav:nth-child(1) {
+    animation: fade-in 1.9s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(2) {
+    animation: fade-in 1.9s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(7) {
+    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(8) {
+    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(9) {
+    animation: fade-in 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(10) {
+    animation: fade-in 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(11) {
+    animation: fade-in 0.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(12) {
+    animation: fade-in 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(13) {
+    animation: fade-in 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(14) {
+    animation: fade-in 0.8s 2.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(15) {
+    animation: fade-in 0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(16) {
+    animation: fade-in 0.8s 2.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(17) {
+    animation: fade-in 0.8s 2.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.nav:nth-child(18) {
+    animation: fade-in 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
