--- a/style2.css
+++ b/style2.css
@@ -18,6 +18,36 @@
     src: url("fonts/Philosopher-BoldItalic.ttf") format("opentype");
 }
 
+@font-face {
+    font-family: 'PhilosopherBoldItalic';
+    src: url("fonts/Philosopher-BoldItalic.ttf") format("opentype");
+}
+
+@font-face {
+    font-family: 'Helvetica';
+    src: url("fonts/Helvetica.ttf") format("opentype");
+}
+
+@font-face {
+    font-family: 'HelveticaLight';
+    src: url("fonts/helvetica-Light.ttf") format("opentype");
+}
+
+@font-face {
+    font-family: 'HelveticaBold';
+    src: url("fonts/Helvetica-Bold.ttf") format("opentype");
+}
+
+@font-face {
+    font-family: 'HelveticaOblique';
+    src: url("fonts/Helvetica-Oblique.ttf") format("opentype");
+}
+
+@font-face {
+    font-family: 'HelveticaBoldOblique';
+    src: url("fonts/Helvetica-Bold-Oblique.ttf") format("opentype");
+}
+
 .html {
     height: 100%;
 }
@@ -149,10 +179,16 @@ header {
     display: inline-block;
     color: #CCF3FF;
     font-family: Helvetica;
+    justify-content: left;
 
 }
 
 
+
+
+.tentacles {
+    z-index: 100;
+}
 
 
 /* 
