--- a/style2.css
+++ b/style2.css
@@ -191,6 +191,22 @@ header {
 }
 
 
+.line-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    overflow: hidden;
+}
+
+svg {
+    display: inline-block;
+    height: 100%;
+
+}
+
 /* 
 ███╗   ██╗ █████╗ ██╗   ██╗
 ████╗  ██║██╔══██╗██║   ██║
@@ -320,7 +336,7 @@ p.matteo {
 ╚════██║██║     ██╔══██╗██║   ██║██║     ██║     ██╔══╝  ██╔══██╗
 ███████║╚██████╗██║  ██║╚██████╔╝███████╗███████╗███████╗██║  ██║
 ╚══════╝ ╚═════╝╚═╝  ╚═╝ ╚═════╝ ╚══════╝╚══════╝╚══════╝╚═╝  ╚═╝
-*/
+
 
 ::-webkit-scrollbar {
     width: 12px;
