--- a/style2.css
+++ b/style2.css
@@ -91,7 +91,6 @@ header {
 
     color: #CCF3FF;
     text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
-    font-size: 23vh;
     font-style: normal;
     font-weight: light;
     line-height: 99.973%;
@@ -114,6 +113,7 @@ header {
 
 .frecce {
     display: flex;
+    height: 3vw;
     justify-content: center;
     padding-bottom: 50px;
     position: relative;
@@ -168,26 +168,25 @@ header {
 .intro h1 {
     color: #CCF3FF;
     text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
-    font-size: 45px;
     font-style: normal;
     font-weight: 300;
     text-align: center;
-    padding-bottom: 150px;
     font-family: Philosopher;
-    padding-top: 150px;
-    padding-bottom: 106px;
     justify-content: center;
 }
 
 .intro h5 {
-    text-align: center;
+    text-align: left;
     width: 838px;
     display: inline-block;
     color: #CCF3FF;
     font-family: Helvetica;
     justify-content: left;
+    font-weight: 300;
 
 }
+
+
 
 
 
