--- a/style vecchio.css
+++ b/style vecchio.css
@@ -1,51 +1,26 @@
 @font-face {
-    font-family: 'Philosopher';
-    src: url("fonts/Philosopher-Regular.ttf") format("opentype");
+    font-family: 'craketest-regular';
+    src: url("fonts/craketest-regular.woff") format("opentype");
 }
 
 @font-face {
-    font-family: 'PhilosopherItalic';
-    src: url("fonts/Philosopher-Italic.ttf") format("opentype");
+    font-family: 'craketest-bold';
+    src: url("fonts/craketest-bold.woff") format("opentype");
 }
 
 @font-face {
-    font-family: 'PhilosopherBold';
-    src: url("fonts/Philosopher-Bold.ttf") format("opentype");
+    font-family: 'craketest-light';
+    src: url("fonts/craketest-light.woff") format("opentype");
 }
 
 @font-face {
-    font-family: 'PhilosopherBoldItalic';
-    src: url("fonts/Philosopher-BoldItalic.ttf") format("opentype");
+    font-family: 'craketest-medium';
+    src: url("fonts/craketest-medium.woff") format("opentype");
 }
 
 @font-face {
-    font-family: 'PhilosopherBoldItalic';
-    src: url("fonts/Philosopher-BoldItalic.ttf") format("opentype");
-}
-
-@font-face {
-    font-family: 'Helvetica';
-    src: url("fonts/Helvetica.ttf") format("opentype");
-}
-
-@font-face {
-    font-family: 'HelveticaLight';
-    src: url("fonts/helvetica-Light.ttf") format("opentype");
-}
-
-@font-face {
-    font-family: 'HelveticaBold';
-    src: url("fonts/Helvetica-Bold.ttf") format("opentype");
-}
-
-@font-face {
-    font-family: 'HelveticaOblique';
-    src: url("fonts/Helvetica-Oblique.ttf") format("opentype");
-}
-
-@font-face {
-    font-family: 'HelveticaBoldOblique';
-    src: url("fonts/Helvetica-Bold-Oblique.ttf") format("opentype");
+    font-family: 'craketest-semibold';
+    src: url("fonts/craketest-semibold.woff") format("opentype");
 }
 
 .html {
@@ -53,10 +28,9 @@
 }
 
 body {
-    padding-top: 20vh;
-    /* 280px */
-    font-family: Philosopher;
+    font-family: craketest-regular;
     margin: 0;
+    font-family: craketest-regular;
     background-image: url('assets/background.svg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -85,10 +59,11 @@ header {
 
     color: #CCF3FF;
     text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
+    font-size: 218px;
+    font-size: 20vh;
     font-style: normal;
     font-weight: 400;
     line-height: 99.973%;
-    text-align: center;
     /* 217.94px */
 }
 
@@ -96,115 +71,15 @@ header {
     color: #CCF3FF;
     text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
     font-family: Helvetica;
-    font-size: 36px;
+    font-size: 42px;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    text-align: center;
 
-    padding-bottom: 100px;
-}
-
-.frecce {
-    display: flex;
-    height: 3vw;
-    justify-content: center;
-    padding-bottom: 50px;
-    position: relative;
-    animation-name: moving;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    transition-timing-function: linear;
-    transition-timing-function: cubic-bezier(0, 0, 1, 1);
-
-    transition-timing-function: ease;
-    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-
-    transition-timing-function: ease-in-out;
-    transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
-
-    transition-timing-function: ease-in;
-    transition-timing-function: cubic-bezier(0.42, 0, 1, 1);
-
-    transition-timing-function: ease-out;
-    transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
-
-}
-
-@keyframes moving {
-    0% {
-        top: 0px;
-    }
-
-    50% {
-        top: 15px;
-    }
-
-    100% {
-        top: 0px;
-    }
-}
-
-/*
-██╗███╗   ██╗████████╗██████╗  ██████╗ 
-██║████╗  ██║╚══██╔══╝██╔══██╗██╔═══██╗
-██║██╔██╗ ██║   ██║   ██████╔╝██║   ██║
-██║██║╚██╗██║   ██║   ██╔══██╗██║   ██║
-██║██║ ╚████║   ██║   ██║  ██║╚██████╔╝
-╚═╝╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝ 
-*/
-
-.intro {
-    text-align: center;
-    justify-content: center;
-}
-
-.intro h1 {
+    font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
     color: #CCF3FF;
-    text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
-    font-style: normal;
-    font-weight: 300;
-    text-align: center;
-    font-family: Philosopher;
-    justify-content: center;
 }
 
-.intro h5 {
-    text-align: left;
-    width: 838px;
-    display: inline-block;
-    color: #CCF3FF;
-    font-family: Helvetica;
-    justify-content: left;
-    font-weight: 300;
-
-}
-
-
-
-
-
-
-.tentacles {
-    z-index: 100;
-}
-
-
-.line-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    overflow: hidden;
-}
-
-svg {
-    display: inline-block;
-    height: 100%;
-
-}
 
 /* 
 ███╗   ██╗ █████╗ ██╗   ██╗
@@ -213,7 +88,7 @@ svg {
 ██║╚██╗██║██╔══██║╚██╗ ██╔╝
 ██║ ╚████║██║  ██║ ╚████╔╝ 
 ╚═╝  ╚═══╝╚═╝  ╚═╝  ╚═══╝                              
-
+*/
 
 .nav {
     display: flex;
@@ -274,7 +149,7 @@ a.Connie {
     color: black;
 }
 
-*/
+
 
 
 
@@ -335,7 +210,7 @@ p.matteo {
 ╚════██║██║     ██╔══██╗██║   ██║██║     ██║     ██╔══╝  ██╔══██╗
 ███████║╚██████╗██║  ██║╚██████╔╝███████╗███████╗███████╗██║  ██║
 ╚══════╝ ╚═════╝╚═╝  ╚═╝ ╚═════╝ ╚══════╝╚══════╝╚══════╝╚═╝  ╚═╝
-
+*/
 
 ::-webkit-scrollbar {
     width: 12px;
@@ -546,24 +421,13 @@ p.matteo {
 }
 
 /*
-███████╗██████╗ ███████╗ ██████╗ ██████╗███████╗
-██╔════╝██╔══██╗██╔════╝██╔════╝██╔════╝██╔════╝
-█████╗  ██████╔╝█████╗  ██║     ██║     █████╗  
-██╔══╝  ██╔══██╗██╔══╝  ██║     ██║     ██╔══╝  
-██║     ██║  ██║███████╗╚██████╗╚██████╗███████╗
-╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝ ╚═════╝╚══════╝
-*/
-
-
-
-/*
 ███╗   ██╗ █████╗ ██╗   ██╗
 ████╗  ██║██╔══██╗██║   ██║
 ██╔██╗ ██║███████║██║   ██║
 ██║╚██╗██║██╔══██║╚██╗ ██╔╝
 ██║ ╚████║██║  ██║ ╚████╔╝ 
 ╚═╝  ╚═══╝╚═╝  ╚═╝  ╚═══╝  
-
+*/
 
 .nav {
     opacity: 0;
@@ -626,5 +490,3 @@ p.matteo {
 .nav:nth-child(18) {
     animation: fade-in 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
 }
-
-*/
