--- a/style.css
+++ b/style.css
@@ -202,6 +202,13 @@ header {
     width: 100%;
     display: block;
 }
+#medusa-wrapper{
+    position: relative;
+}
+.badge-personaggio {
+    position: absolute;
+}
+
 
 #tentacolobianco,
 #Vector-80 {
