--- a/style.css
+++ b/style.css
@@ -115,7 +115,8 @@ header {
 .frecce {
     display: flex;
     justify-content: center;
-    padding-bottom: 50px;
+    padding-bottom: 10vw;
+    padding-top: 5vw;
     position: relative;
     animation-name: moving;
     animation-duration: 4s;
@@ -168,15 +169,14 @@ header {
 .intro h1 {
     color: #CCF3FF;
     text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
-    font-size: 45px;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     text-align: center;
     font-family: Philosopher;
     padding-top: 150px;
     justify-content: center;
 
-    font-size: 3vw
+    font-size: 3vw;
 }
 
 .intro h5 {
@@ -187,7 +187,25 @@ header {
     font-family: Helvetica;
     font-weight: 300;
 
-    font-size: 1vw
+    font-size: 1vw;
+    padding-bottom: 18vw;
+}
+
+
+.story h1 {
+    text-align: center;
+    justify-content: center;
+
+    color: #CCF3FF;
+    text-shadow: 0px 4px 41px rgba(0, 0, 0, 0.34);
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    font-family: Philosopher;
+    padding-top: 150px;
+    justify-content: center;
+
+    font-size: 4vw;
 }
 
 
@@ -263,38 +281,12 @@ svg {
 }
 
 p {
-    color: #25b725;
+    color: pink;
+    padding: 0px 16px;
+    text-align: center;
+
 }
 
-p.marco {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-p.ginevra {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-p.sofia {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-p.andrea {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-p.riccardo {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-p.matteo {
-    padding-left: 10px;
-    padding-right: 10px;
-}
 
 
 /*
