--- a/style.css
+++ b/style.css
@@ -148,6 +148,35 @@ header {
     }
 }
 
+/* 
+.overlay {
+    position: fixed;
+    width: 100vw;
+    height: 100vw;
+    z-index: 2;
+    display: flex;
+}
+
+.bar {
+    width: 10vw;
+    height: 105vh;
+    background: #1a1a1a;
+}
+
+.counter {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    z-index: 10000;
+    color: white;
+    z-index: 100000;
+    font-size: 3vw;
+    font-family: Philosopher;
+} */
+
 /*
 ██╗███╗   ██╗████████╗██████╗  ██████╗ 
 ██║████╗  ██║╚══██╔══╝██╔══██╗██╔═══██╗
