--- a/style.css
+++ b/style.css
@@ -59,9 +59,9 @@ body {
     /* 280px */
     font-family: Philosopher;
     margin: 0;
-    background-image: url('assets/background.svg');
+    /* background-image: url('assets/background.svg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
 
 .medusa {
@@ -111,7 +111,7 @@ header {
 .frecce {
     display: flex;
     justify-content: center;
-    padding-bottom: 10vw;
+    padding-bottom: 23vw;
     padding-top: 5vw;
     position: relative;
     animation-name: moving;
@@ -148,13 +148,36 @@ header {
     }
 }
 
+body {
+    /* background: linear-gradient(-45deg, #0054A1, #030C2F, #091552, #1B4583, #232F6B); */
+    background: linear-gradient(-45deg, #5b66fd, #2a4369, #1B4583, #364DC8);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+
 
 #Emo01 {
-    cursor: url(/assets/medusina.svg), auto;
+    cursor: url(/assets/cursorred.svg), auto;
 }
 
 #Emo02 {
-    cursor: url(/assets/medusinared.svg), auto;
+    cursor: url(/assets/cursorblue.svg), auto;
 }
 
 #Emo03 {
@@ -330,7 +353,6 @@ header {
     font-weight: 400;
     text-align: center;
     font-family: Philosopher;
-    padding-top: 150px;
     justify-content: center;
 
     font-size: 3vw;
@@ -426,6 +448,9 @@ svg g {
 #true-den,
 #true-emily,
 #true-ben,
+#aboutit,
+#plot,
+#story,
 #time01,
 #time02,
 #time03,
